--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -22,6 +22,14 @@
         android:textSize="20sp" />
 
     <Button
+        android:id="@+id/share_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_share" />
+    <Button
         android:id="@+id/set_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
