优化了UI界面，实现了常用城市列表的直接动画切换，但是手势识别还没有完成，是用两个按钮切换的，而且现在还存在非常用城市的点击查询不能用的bug

--- a/app/src/main/res/layout/aqi.xml
+++ b/app/src/main/res/layout/aqi.xml
@@ -4,17 +4,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-    android:background="#8000">
+    android:layout_margin="15dp">
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         android:text="空气质量"
         android:textColor="#fff"
-        android:textSize="20sp"/>
+        android:textSize="20sp"/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textColor="#fff"
-                    android:textSize="40sp"
+                    android:textSize="45sp"
                     />
 
                 <TextView
@@ -46,7 +45,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="AQI指数"
-                    android:textColor="#fff"/>
+                    android:textColor="#fff"
+                    android:textSize="18sp"/>
 
             </LinearLayout>
 
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textColor="#fff"
-                    android:textSize="40sp"
+                    android:textSize="45sp"
                     />
 
                 <TextView
@@ -78,6 +78,7 @@
                     android:layout_gravity="center"
                     android:text="PM2.5指数"
                     android:textColor="#fff"
+                    android:textSize="18sp"
                     />
 
             </LinearLayout>
