--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.coolweather.android.CityActivity">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,7 +14,11 @@
         <ListView
             android:id="@+id/city_listview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+        </ListView>
+
+
+
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -30,5 +35,10 @@
             app:rippleColor="#ff87ffeb"/>
     </FrameLayout>
 
-
 </android.support.v4.widget.DrawerLayout>
+
+
+
+
+
+
