--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -22,21 +22,21 @@
         android:textColor="#fff"/>
 
     <TextView
-        android:id="@+id/max_text"
+        android:id="@+id/max_min_tem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:gravity="right"
         android:textColor="#fff"/>
 
-    <TextView
+    <!--<TextView
         android:id="@+id/min_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="right"
-        android:textColor="#fff"/>
+        android:textColor="#fff"/>-->
 
 </LinearLayout>
