--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -30,6 +30,7 @@
                 android:overScrollMode="never">
 
                 <LinearLayout
+                    android:id="@+id/touch_layout"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
