--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -13,14 +13,14 @@
     android:layout_centerVertical="true"
     android:background="@drawable/ic_home" />
 
-    <Button
+    <!--<Button
         android:id="@+id/left_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/left" />
+        android:background="@drawable/left" />-->
 
     <TextView
         android:id="@+id/title_city"
@@ -30,14 +30,14 @@
         android:textColor="#fff"
         android:textSize="20sp" />
 
-    <Button
+    <!--<Button
         android:id="@+id/right_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginRight="40dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/right" />
+        android:background="@drawable/right" />-->
 
     <Button
         android:id="@+id/set_button"
